@@ -25,14 +25,14 @@ public class Scene {
         //SteganographyClassLoader loader = new SteganographyClassLoader(
         //        new URL("https://cdn.njuics.cn/example.BubbleSorter.png"));
         //SteganographyClassLoader loader = new SteganographyClassLoader(
-        //        new URL("file:/./S181860072/BubbleSorter.png"));
+        //        new URL("file:S181860072.BubbleSorter.png"));
         //SteganographyClassLoader loader = new SteganographyClassLoader(
-        //    new URL("file:/./S181860072/QuickSorter.png"));
+        //        new URL("file:S181860072.QuickSorter.png"));
         SteganographyClassLoader loader = new SteganographyClassLoader(
-            new URL("https://github.com/jwork-2021/jw03-fiyqkrc/blob/main/S181860072.SelectSorter.png"));
-        Class c = loader.loadClass("S181860072.SelectSorter");
+              new URL("file:S181860072.SelectSorter.png"));
+        Class<?> c = loader.loadClass("S181860072.SelectSorter");
 
-        Sorter sorter = (Sorter) c.newInstance();
+        Sorter sorter = (Sorter) c.getDeclaredConstructor().newInstance();
 
         theGeezer.setSorter(sorter);
 
